--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,10 +1,31 @@
 $primaryColor: rgb(138, 194, 129);
-$navbarColor: rgba(97, 97, 97, 0.811);
-$headFont: "Noto Sans JP", sans-serif;
-$subheadFont: "Fira Sans", sans-serif;
+$navbarColor: rgba(45, 45, 45, 0.811);
+$primaryFont: "Noto Sans JP", sans-serif;
+$secondaryFont: "Fira Sans", sans-serif;
 $desktopWidth: 1440px;
+$bodyColor: rgba(3, 4, 3, 0.907);
+$textColor: white;
+$borderButton: 15px;
+$postBorderRadius: 8px;
+$postPictureWidth: 100%;
+$postPictureHeigth: 500px;
+
+// Text
+p,
+h2,
+h4 {
+  color: $textColor;
+  font-family: $secondaryFont;
+}
+
+h4 {
+  font-size: 27px;
+}
 
 // NAV BAR
+label {
+  color: $textColor;
+}
 .navbar {
   background-color: $navbarColor;
 }
@@ -15,23 +36,49 @@ $desktopWidth: 1440px;
 }
 a {
   text-decoration: none;
-  color: white;
+  color: $textColor;
+  font-family: $secondaryFont;
 }
 a:hover {
   color: $primaryColor;
 }
 .contactbook {
-  font-family: $headFont;
+  font-family: $primaryFont;
   font-weight: 700;
 }
-img {
+.profile-pic {
   width: 35px;
   height: 35px;
   border-radius: 1em;
+}
+.cta-button {
+  border-radius: $borderButton;
 }
 
 // BODY
 body {
   max-width: $desktopWidth;
   overflow-x: hidden;
+  background-color: $bodyColor;
+}
+
+// New post
+.new-post-wrap,
+.old-post-wrap {
+  background-color: $navbarColor;
+  border-radius: $postBorderRadius;
+}
+
+// Old post
+.old-post-wrap {
+  width: 43.5%;
+}
+.post-pic {
+  width: $postPictureWidth;
+  height: $postPictureHeigth;
+  object-fit: cover;
+}
+.user-interaction-wrap {
+  border-top: 1px solid white;
+  border-bottom: 1px solid white;
 }
