--- a/scss/login.scss
+++ b/scss/login.scss
@@ -1,5 +1,5 @@
 $primaryColor: rgb(138, 194, 129);
-$navbarColor: rgba(45, 45, 45, 0.811);
+$secondaryColor: rgba(45, 45, 45, 0.811);
 $textColor: white;
 $paddingLoginBox: 0 40px 30px 40px;
 $primaryFont: "Noto Sans JP", sans-serif;
@@ -13,7 +13,7 @@ h1 {
   padding: 80px 0;
 }
 .login-box {
-  background-color: $navbarColor;
+  background-color: $secondaryColor;
   color: $textColor;
   padding: $paddingLoginBox;
 }
