--- a/scss/profile.css
+++ b/scss/profile.css
@@ -1,10 +1,26 @@
-.profile-pic {
+.user-profile-pic {
+  width: 40px;
+  height: 40px;
+  border-radius: 7em;
+}
+
+.user-info {
+  background-color: rgba(45, 45, 45, 0.811);
+}
+
+.profile-details-pic {
   width: 250px;
   height: 250px;
   border-radius: 7em;
 }
 
+.user-details-wrap {
+  color: white;
+}
+
 .user-details-text {
-  border: 1px solid black;
+  border: 1px solid white;
   width: 500px;
+  height: 150px;
+  padding: 5px;
 }/*# sourceMappingURL=profile.css.map */
