--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -1,13 +1,30 @@
+$userProfilePic: 40px;
 $profilePicSize: 250px;
 $profilePicBorder: 7em;
-$borderBox: 1px solid black;
+$borderBox: 1px solid white;
+$secondaryColor: rgba(45, 45, 45, 0.811);
 
-.profile-pic {
+.user-profile-pic {
+  width: $userProfilePic;
+  height: $userProfilePic;
+  border-radius: $profilePicBorder;
+}
+
+// Body
+.user-info {
+  background-color: $secondaryColor;
+}
+.profile-details-pic {
   width: $profilePicSize;
   height: $profilePicSize;
   border-radius: $profilePicBorder;
 }
-.user-details-text{
+.user-details-wrap {
+  color: white;
+}
+.user-details-text {
   border: $borderBox;
   width: 500px;
+  height: 150px;
+  padding: 5px;
 }
