--- a/scss/index.css
+++ b/scss/index.css
@@ -1,12 +1,22 @@
 p,
+h1,
 h2,
+h3,
 h4 {
   color: white;
   font-family: "Fira Sans", sans-serif;
 }
 
-h4 {
+h1 {
+  font-size: 33px;
+}
+
+h2 {
   font-size: 27px;
+}
+
+h4 {
+  font-size: 24px;
 }
 
 .user-interaction-text {
@@ -17,7 +27,7 @@ label {
   color: white;
 }
 
-.navbar {
+.navigation {
   background-color: rgba(45, 45, 45, 0.811);
 }
 
@@ -42,37 +52,68 @@ a:hover {
   font-weight: 700;
 }
 
-.search-button {
-  background-color: none;
-}
-
-#search-bar-icon {
-  color: rgb(138, 194, 129);
-  background-color: none;
-}
-
 .profile-pic {
   width: 50px;
   height: 50px;
   border-radius: 1em;
 }
 
+.form-control {
+  height: 35px;
+}
+
+.form-wrap input {
+  width: 250px;
+}
+
+.collapse {
+  display: flex;
+}
+
+.navbar-nav {
+  display: flex;
+  flex: 1;
+}
+
+.logo-wrap {
+  flex: 1;
+}
+
+.navbar {
+  flex: 2;
+}
+
 button,
 input {
   border: none;
-  text-align: center;
   text-decoration: none;
   font-family: "Fira Sans", sans-serif;
   font-size: 16px;
+  padding: 5px;
+  letter-spacing: 1px;
 }
 
-.login-button {
+.login-btn {
   background-color: rgb(138, 194, 129);
   color: white;
+  width: 80px;
+  margin-right: 10px;
 }
 
-.sign-up-button {
-  color: rgb(138, 194, 129);
+.sign-up-btn {
+  color: rgba(3, 4, 3, 0.907);
+  width: 80px;
+}
+
+.navbar-toggler {
+  background-color: white;
+  color: rgba(45, 45, 45, 0.811);
+  font-size: 16px;
+  border: none;
+}
+
+.navbar-toggler-icon {
+  border: none;
 }
 
 body {
@@ -86,6 +127,10 @@ body {
   background-color: rgba(45, 45, 45, 0.811);
 }
 
+.post-pic-wrap {
+  max-width: 380px;
+}
+
 .post-pic {
   width: 100%;
   height: 500px;
@@ -96,4 +141,33 @@ body {
 .user-interaction-wrap {
   border-top: 1px solid white;
   border-bottom: 1px solid white;
+}
+
+@media only screen and (max-width: 767px) {
+  .collapse {
+    flex-direction: column-reverse;
+    align-items: flex-end;
+  }
+  .navbar-nav {
+    margin-top: 15px;
+    flex-direction: column-reverse;
+    align-items: flex-end;
+    border-top: 1px solid white;
+  }
+  .cta-button {
+    flex-direction: column;
+    margin-top: 10px;
+  }
+  .login-btn {
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
+  .form-wrap {
+    margin-top: 10px;
+    justify-items: flex-end;
+    margin-right: 0;
+  }
+  .form-wrap input {
+    width: 190px;
+  }
 }/*# sourceMappingURL=index.css.map */
