--- a/scss/login.css
+++ b/scss/login.css
@@ -25,7 +25,7 @@ form label:hover {
   cursor: text;
 }
 
-.username,
+.input-text,
 .pwd {
   width: 100%;
   height: 20px;
@@ -45,6 +45,14 @@ form label:hover {
   font-family: "Fira Sans", sans-serif;
 }
 
-.login-form a {
+.login-text a {
   text-decoration: underline;
+}
+
+.form-error {
+  display: none;
+  color: #dd493a;
+  font-size: 1rem;
+  width: 80%;
+  text-transform: capitalize;
 }/*# sourceMappingURL=login.css.map */
