--- a/scss/login.scss
+++ b/scss/login.scss
@@ -26,7 +26,7 @@ h1 {
 form label:hover {
   cursor: text;
 }
-.username,
+.input-text,
 .pwd {
   width: 100%;
   height: 20px;
@@ -43,6 +43,13 @@ form label:hover {
 .cta-login {
   font-family: $secondaryFont;
 }
-.login-form a{
+.login-text a {
   text-decoration: underline;
+}
+.form-error {
+  display: none;
+  color: #dd493a;
+  font-size: 1rem;
+  width: 80%;
+  text-transform: capitalize;
 }
