adds styling picture

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -6,7 +6,7 @@ $desktopWidth: 1440px;
 $bodyColor: rgba(3, 4, 3, 0.907);
 $textColor: white;
 $postPictureWidth: 100%;
-$postPictureHeigth: 500px;
+$postPictureHeigth: 100%;
 $fontSizeH1: 33px;
 $fontSizeH2: 27px;
 $fontSizeH4: 24px;
