--- a/scss/login.css
+++ b/scss/login.css
@@ -1,6 +1,14 @@
 h1 {
   color: rgb(138, 194, 129);
   font-family: "Noto Sans JP", sans-serif;
+  text-transform: uppercase;
+  font-size: 46px;
+}
+
+label {
+  color: white;
+  font-size: 1.2rem;
+  font-weight: 600;
 }
 
 .login-main {
@@ -11,10 +19,6 @@ h1 {
   background-color: rgba(45, 45, 45, 0.811);
   color: white;
   padding: 0 40px 30px 40px;
-}
-
-.login-box h1 {
-  font-size: 40px;
 }
 
 .login-box a {
