--- a/scss/login.scss
+++ b/scss/login.scss
@@ -4,10 +4,18 @@ $textColor: white;
 $paddingLoginBox: 0 40px 30px 40px;
 $primaryFont: "Noto Sans JP", sans-serif;
 $secondaryFont: "Fira Sans", sans-serif;
+$fontSizeH1: 46px;
 
 h1 {
   color: $primaryColor;
   font-family: $primaryFont;
+  text-transform: uppercase;
+  font-size: $fontSizeH1;
+}
+label {
+  color: $textColor;
+  font-size: 1.2rem;
+  font-weight: 600;
 }
 .login-main {
   padding: 80px 0;
@@ -17,9 +25,7 @@ h1 {
   color: $textColor;
   padding: $paddingLoginBox;
 }
-.login-box h1 {
-  font-size: 40px;
-}
+
 .login-box a {
   color: $primaryColor;
 }
