--- a/scss/index.scss
+++ b/scss/index.scss
@@ -166,6 +166,29 @@ body {
   }
 }
 
+.checkbox-container {
+  display: flex;
+  justify-content: center;
+}
+
+.posts-container {
+  margin: auto;
+}
+
+.post {
+  background-color: lightgray;
+  border-radius: 4px;
+  padding: 16px;
+  margin: 24px 0;
+}
+
+.postAuthor {
+  color: darkblue;
+}
+.postPic {
+  width: 100px;
+  height: 100px;
+}
 // @media only screen and (max-width: 580px) {
 
 // }
