--- a/scss/index.css
+++ b/scss/index.css
@@ -181,13 +181,57 @@ body {
   border-radius: 4px;
   padding: 16px;
   margin: 24px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .postAuthor {
-  color: darkblue;
+  color: darkgreen;
 }
 
 .postPic {
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
+}
+
+.fa-magnifying-glass {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+.close {
+  color: #000000;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }/*# sourceMappingURL=index.css.map */
